Fix indentation and formting.

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,12 @@
     <td><span class="author"><%= author %></span></td>
     <td><span class="title"><%= title %></span></td>
     <td><span class="url"><%= url %></span></td>
-    <td><button class="btn btn-warning btn-sm edit-blog">Edit Blog</button>&nbsp;&nbsp;<button class="btn btn-danger btn-sm remove-blog">Remove Blog</button>&nbsp;&nbsp;<button class="btn btn-success btn-sm update-blog" style="display: none;">Update Blog</button>&nbsp;&nbsp;<button class="btn btn-danger btn-sm cancel" style="display: none;">Cancel</button></td>
+    <td>
+      <button class="btn btn-warning btn-sm edit-blog">Edit Blog</button>&nbsp;&nbsp;
+      <button class="btn btn-danger btn-sm remove-blog">Remove Blog</button>&nbsp;&nbsp;
+      <button class="btn btn-success btn-sm update-blog" style="display: none;">Update Blog</button>&nbsp;&nbsp;
+      <button class="btn btn-default btn-sm cancel" style="display: none;">Cancel</button>
+    </td>
   </script>
 
   <!-- External Scripts -->
