--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,20 @@
     <td><span class="title"><%= title %></span></td>
     <td><span class="url"><%= url %></span></td>
     <td>
-      <button class="btn btn-warning btn-sm edit-blog">Edit Blog</button>&nbsp;&nbsp;
-      <button class="btn btn-danger btn-sm remove-blog">Remove Blog</button>&nbsp;&nbsp;
-      <button class="btn btn-success btn-sm update-blog" style="display: none;">Update Blog</button>&nbsp;&nbsp;
-      <button class="btn btn-default btn-sm cancel" style="display: none;">Cancel</button>
+      <div class="form-inline">
+        <div class="form-group">
+          <button class="btn btn-warning btn-sm edit-blog">Edit Blog</button>
+        </div>
+        <div class="form-group">
+          <button class="btn btn-danger btn-sm remove-blog">Remove Blog</button>
+        </div>
+        <div class="form-group">
+          <button class="btn btn-success btn-sm update-blog" style="display: none;">Update Blog</button>
+        </div>
+        <div class="form-group">
+          <button class="btn btn-default btn-sm cancel" style="display: none;">Cancel</button>
+        </div>
+      </div>
     </td>
   </script>
 
